[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbg-pls = {version = "0.3.3",  features = ["pretty", "colors", "derive"]}
ndarray = {version = "0.15.6", features = ["rayon"]}
rayon = "1.5.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
