[package]
name = "iio"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ad9361-iio = {path = "../ad9361"} 
clap = "4.0.25"
env_logger = "0.10.0"
industrial-io = "0.5.1"
log = "0.4.0"
plotters = "0.3.4"
rustfft = "6.1.0"
sorter = {path = "../sorter"}
